lockr for saves and logs, endgame statistics reset when newgame, statuses intro animation

--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -6,8 +6,9 @@
   height 860px
   border 1px black solid
   background-color black
-  background-image url('../../../assets/img/bg/test_background1.jpg')
+  // background-image url('../../../assets/img/bg/test_background1.jpg')
   animation animatedBackground 2s
+  box-shadow inset 0 0 300px darkred
 
 #ArmoryScreenLabel
   position absolute
