--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -8,6 +8,7 @@
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
   animation animatedBackground 1.5s
+  box-shadow inset 0 0 500px darkslateblue
 
 #BriefingMissionShiftRight
   position absolute
