--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -5,6 +5,7 @@
   left 50%
   background-image url('../../../assets/img/bg/test_background4.jpg')
   margin-left -820px
+  box-shadow inset 0 0 300px darkcyan
 
 #DashboardScreenLogout
   position absolute
