--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -16,6 +16,16 @@
 .log-record
   display block
 
+#ExportLogButton
+  position absolute
+  width 110px
+  height 45px
+  background-color black
+  color ghostwhite
+  bottom 175px
+  right 10px
+  font-size 0.9em
+
 #SaveLogButton
   position absolute
   width 110px
