--- a/src/client/briefing/activemission/agentassignment.styl
+++ b/src/client/briefing/activemission/agentassignment.styl
@@ -10,6 +10,7 @@
   height 144px
   margin 3px
   border 1px solid darkslategrey
+  background rgba(0, 0, 0, 0.8)
 
 .assignment-text-placeholder
   color ghostwhite
