animations of login, signup and their messages, adjusting dashboard layout

--- a/src/client/auth/signup.styl
+++ b/src/client/auth/signup.styl
@@ -12,6 +12,7 @@
   height 195px
   left 630px
   top 295px
+  opacity 0
 
   form
     width 20em
@@ -45,12 +46,11 @@
   z-index 1000
 
 #SignupToLogin
-  position absolute
-  top 250px
-  right 650px
+  position relative
   color black
   background-color silver
   opacity 0.5
+
 
 #SignupToIntro
   position absolute
