--- a/src/client/dashboard/missionswindow/dashboard.missions.list.styl
+++ b/src/client/dashboard/missionswindow/dashboard.missions.list.styl
@@ -1,7 +1,7 @@
 #DashboardMissionsList
   position absolute
-  left 480px
-  top 10px
+  left 380px
+  top 25px
   text-align center
   border 1px solid black
   color ghostwhite
@@ -16,6 +16,7 @@
 
   td
     border 1px solid black
-    background-color black
-    opacity 0.5
+    background rgba(0, 0, 0, 0.5)
+    font white
+    opacity 1
     font-weight bold
