intermediate goals implementation

--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -71,9 +71,7 @@
   font-size 1.5em
   z-index 1001
 
-// #ToPayments
-//   position absolute
-//   width 75px
-//   height 35px
-//   right 10px
-//   bottom 100px
+#IntermediateGoalButton
+  position absolute
+  top 520px
+  left 20px
