missionscreen box shadow via lib, login animations, sounds, DCE, mission pictures revamped

--- a/src/client/gameflow/intermediate.goal.styl
+++ b/src/client/gameflow/intermediate.goal.styl
@@ -17,7 +17,7 @@
   #OperationsLevelThree.done
     text-decoration line-through
 
-  #LoyalCrew.done
+  #LoyalCrewGoal.done
     text-decoration line-through
 
   #DolceVitaGoal.done
