--- a/src/client/briefing/activemission/mission.thumbnail.styl
+++ b/src/client/briefing/activemission/mission.thumbnail.styl
@@ -1,7 +1,9 @@
 #ActualMissionThumbnail
   position absolute
   width 550px
-  height 255px
+  height 288px
+  background-size 100% 100%
+  background-repeat no-repeat
 
 #MissionDescription
   position absolute
