--- a/src/client/dashboard/introduction.window.styl
+++ b/src/client/dashboard/introduction.window.styl
@@ -12,3 +12,11 @@
   padding-left 35px
   padding-right 35px
   z-index 1001
+
+#ReadIntroductionWindowButton
+  position absolute
+  width 240px
+  left -120px
+  margin-left 50%
+  bottom 20px
+  border 3px solid black
