game event POC, collection window, DCE, strategical window for animatedBackground

--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -6,6 +6,7 @@
   // background-image url('../../../assets/img/bg/test_background4.jpg')
   margin-left -820px
   box-shadow inset 0 0 300px darkcyan
+  animation animatedBackground 2s
 
 #DashboardScreenLogout
   position absolute
@@ -70,8 +71,3 @@
   font-weight bold
   font-size 1.5em
   z-index 1001
-
-#IntermediateGoalButton
-  position absolute
-  top 520px
-  left 20px
