--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -12,6 +12,7 @@
   font-weight bold
   background-color black
   background rgba(0, 0, 0, 0.8)
+  animation animatedBackground 2s
 
 .log-record
   display block
