--- a/src/client/dashboard/statuseswindow/status.tier.styl
+++ b/src/client/dashboard/statuseswindow/status.tier.styl
@@ -4,3 +4,8 @@
   top 250px
   width 1020px
   height 210px
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
