--- a/src/client/gameflow/get.more.missions.styl
+++ b/src/client/gameflow/get.more.missions.styl
@@ -1,8 +1,10 @@
 .get-more-missions.done
   text-decoration line-through
+  color red
 
 .get-more-missions
   font-size 0.8em
 
 #GetMoreMissions.done
   text-decoration line-through
+  color red
