--- a/src/client/gameflow/intermediate.goal.styl
+++ b/src/client/gameflow/intermediate.goal.styl
@@ -3,22 +3,28 @@
   max-width 300px
   top 65px
   left 10px
-  background-color grey
-  border 3px solid black
-  border-radius 1em
-  font-size 1.4em
+  background rgba(0, 0, 0, 1)
+  border 3px solid ghostwhite
+  color ghostwhite
+  font-size 1.3em
+  font-weight bold
 
-  #FirstMissionGoal.done
-    text-decoration line-through
+#FirstMissionGoal.done
+  text-decoration line-through
+  color red
 
-  #AgentRankFour.done
-    text-decoration line-through
+#AgentRankFour.done
+  text-decoration line-through
+  color red
 
-  #OperationsLevelThree.done
-    text-decoration line-through
+#OperationsLevelThree.done
+  text-decoration line-through
+  color red
 
-  #LoyalCrewGoal.done
-    text-decoration line-through
+#LoyalCrewGoal.done
+  text-decoration line-through
+  color red
 
-  #DolceVitaGoal.done
-    text-decoration line-through
+#DolceVitaGoal.done
+  text-decoration line-through
+  color red
