--- a/src/client/dashboard/optionswindow/debug.window.styl
+++ b/src/client/dashboard/optionswindow/debug.window.styl
@@ -2,9 +2,10 @@
   position absolute
   width 670px
   height 300px
-  bottom 0px
-  left 0px
-  border 1px solid white
+  bottom 10px
+  left 750px
+  border 3px solid darkred
+  border-radius 1em
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   form
