--- a/src/client/dashboard/optionswindow/options.game.window.styl
+++ b/src/client/dashboard/optionswindow/options.game.window.styl
@@ -2,9 +2,10 @@
   position absolute
   width 670px
   height 300px
-  bottom -90px
-  right 0px
-  border 1px solid white
+  bottom 5px
+  left 5px
+  border 3px solid white
+  border-radius 1em
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   legend
