--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -1,10 +1,10 @@
 #OptionsWindow
   position absolute
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
-  width 1340px
-  height 695px
-  top 15px
+  width 1640px
+  height 860px
   color black
+  background rgba(0, 255, 0, 0.3)
   animation animatedBackground 2s
 
   .options-form
