--- a/src/client/auth/signup.message.styl
+++ b/src/client/auth/signup.message.styl
@@ -1,15 +1,20 @@
 #SignupMessage
   position absolute
-  width 460px
-  height 180px
-  top 60px
-  left 570px
+  top 150px
+  left 620px
+  width 340px
   border 1px solid gold
   border-radius 1em
-  display flex
   text-align center
   font-weight bold
   font-size 1.2em
   padding 5px
   opacity 0
   color gold
+
+  #SignupToLogin
+    width 120px
+    height 40px
+    color black
+    background-color silver
+    opacity 0.5
