poker table imgsrc, attention interface in briefing, handling of appropriate lockeddice equipment function

--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -4,11 +4,11 @@
   margin-left -820px
   width 1640px
   height 860px
-  border 1px solid darkslategrey
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
   animation animatedBackground 1.5s
-  box-shadow inset 0 0 500px darkslateblue
+  box-shadow inset 0 0 250px darkslateblue
+  z-index 0
 
 #BriefingMissionShiftRight
   position absolute
