--- a/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
+++ b/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
@@ -9,6 +9,7 @@
 #MissionStartMessage
   position absolute
   font-size 2.2em
+  background-color black
   color yellow
   font-weight bold
   width 510px
