--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -19,6 +19,7 @@ body
   font-family 'Segoe UI', 'Lucida Grande','Ubuntu','sans-serif'
   font-size 16px
   line-height 1.5
+  z-index -1001
   /*overflow hidden*/
 /*
 input
