npm inventory, stub of intro, interface of briefing room

--- a/src/client/dashboard/introduction.window.styl
+++ b/src/client/dashboard/introduction.window.styl
@@ -8,6 +8,7 @@
   left -430px
   margin-left 50%
   text-align center
+  font-size 1.3em
   font-weight bold
   padding-left 35px
   padding-right 35px
