--- a/src/client/mission/agentstier/agentstier.styl
+++ b/src/client/mission/agentstier/agentstier.styl
@@ -5,6 +5,9 @@
   width 430px
   height 860px
   z-index 10
+  -webkit-animation-delay 5s
+  animation-delay 5s
+  animation animatedBackground 3s ease-in
 
 #AgentScrollBarWithNavButtons.on-mission
   left 15px
