--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -1,8 +1,3 @@
-@keyframes animatedBackground {
-  from { opacity: 0 }
-  to { opacity: 1 }
-}
-
 /*Mission Tracking Screen layout*/
 #MissionTrackingScreen
   position absolute
@@ -16,7 +11,7 @@
   background-size 100% 100%
   // opacity 0.5
   box-shadow inset 0 0 500px darkblue
-  animation animatedBackground 1s
+  animation slideInLeft 1s
 
 #MissionScreenDarkener
   position absolute
