--- a/src/client/mission/tasktier/tasktier.styl
+++ b/src/client/mission/tasktier/tasktier.styl
@@ -5,3 +5,6 @@
   width 330px
   height 860px
   z-index 10
+  -webkit-animation-delay 5s
+  animation-delay 5s
+  animation animatedBackground 3s ease-in
