--- a/src/client/briefing/activemission/active.mission.styl
+++ b/src/client/briefing/activemission/active.mission.styl
@@ -1,3 +1,16 @@
 .active-mission
   position absolute
   left 550px
+
+#ActiveMissionToggleOff
+  position absolute
+  top 10px
+  left 10px
+  height 20px
+  width 20px
+  border-radius 10px
+  background-color red
+  z-index 1
+  // animation zoomIn 2s ease-out 2s forwards
+  // -webkit-animation zoomIn 2s ease-out 2s forwards
+  // -moz-animation zoomIn 2s ease-out 2s forwards
