--- a/src/client/briefing/activemission/actual.missioncard.styl
+++ b/src/client/briefing/activemission/actual.missioncard.styl
@@ -21,11 +21,14 @@
 
 .mission-card.actual
   position relative
-  top 15px
+  top 100px
   left 0px
   width 550px
-  height 680px
+  height 480px
   border 2px solid black
+  background-color rgba(0, 0, 0, 0.7)
+  animation zoomIn 1s ease-out
+  z-index 1
 
 .task.actual
   display flex
