--- a/src/client/mission/agentstier/agentonmission/agentonmission.styl
+++ b/src/client/mission/agentstier/agentonmission/agentonmission.styl
@@ -7,6 +7,7 @@
   height 265px
   margin 0px
   border 2px solid darkred
+  animation rotateIn 2s ease-out
 
 #AgentOnMissionStatus
   color orangered
