--- a/src/client/mission/tabletoptier/tabletoptier.styl
+++ b/src/client/mission/tabletoptier/tabletoptier.styl
@@ -5,6 +5,9 @@
   width 580px
   height 860px
   z-index 10
+  -webkit-animation-delay 5s
+  animation-delay 5s
+  animation animatedBackground 3s ease-in
 
 #MissionInCountry
   position absolute
