fixing after npm update, postcss package

--- a/src/client/briefing/desk.plan.toggle.styl
+++ b/src/client/briefing/desk.plan.toggle.styl
@@ -5,6 +5,4 @@
   bottom 315px
   right 10px
   z-index 0
-  -webkit-transform skew(35deg)
-  -moz-transform skew(35deg)
-  -o-transform skew(35deg)
+  transform skew(35deg)
