--- a/src/client/briefing/mission.list.toggle.styl
+++ b/src/client/briefing/mission.list.toggle.styl
@@ -5,9 +5,4 @@
   bottom 460px
   left 76px
   z-index 0
-  // -webkit-transform skew(-2deg)
-  // -moz-transform skew(-2deg)
-  // -o-transform skew(-2deg)
-  -webkit-transform rotate(-4deg)
-  -moz-transform rotate(-4deg)
-  -o-transform rotate(-4deg)
+  transform rotate(-4deg)
