--- a/src/client/tutorial/curved.tail.arrow.styl
+++ b/src/client/tutorial/curved.tail.arrow.styl
@@ -5,10 +5,7 @@
   height 0
   border-top 18px solid transparent
   border-right 18px solid blue
-  -webkit-transform rotate(-100deg)
-  -moz-transform rotate(-100deg)
-  -ms-transform rotate(-100deg)
-  -o-transform rotate(-100deg)
+  transform rotate(-100deg)
 }
 
 .curved-tail-arrow:after {
@@ -21,8 +18,5 @@
   left -18px
   width 24px
   height 24px
-  -webkit-transform rotate(45deg)
-  -moz-transform rotate(45deg)
-  -ms-transform rotate(45deg)
-  -o-transform rotate(45deg)
+  transform rotate(45deg)
 }
