--- a/src/client/briefing/activemission/active.mission.toggle.styl
+++ b/src/client/briefing/activemission/active.mission.toggle.styl
@@ -5,6 +5,4 @@
   top 140px
   left 685px
   z-index 0
-  -webkit-transform rotate(1deg)
-  -moz-transform rotate(1deg)
-  -o-transform rotate(1deg)
+  transform rotate(1deg)
