fixed extract-text-webpack plugin for prod, lets see

--- a/src/client/dashboard/dashboard.content.styl
+++ b/src/client/dashboard/dashboard.content.styl
@@ -4,4 +4,4 @@
   height 860px
   // background-image url('../../../assets/img/bg/test_background1.jpg')
   border-radius 0.5em
-  animation animatedBackground 2s
+  // animation animatedBackground 2s
