agent loyal, hotfix, CSS animations on close of selected components

--- a/src/client/briefing/activemission/actual.missioncard.styl
+++ b/src/client/briefing/activemission/actual.missioncard.styl
@@ -27,7 +27,7 @@
   height 480px
   border 2px solid black
   background-color rgba(0, 0, 0, 0.7)
-  animation zoomIn 1s ease-out
+  // animation zoomInDown 1s ease-out
   z-index 1
 
 .task.actual
