--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -6,7 +6,7 @@
   height 860px
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
-  animation animatedBackground 1.5s
+  animation slideInLeft 1.5s
   box-shadow inset 0 0 250px darkslateblue
   z-index 0
 
