--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -7,7 +7,7 @@
   border 1px black solid
   background-color black
   // background-image url('../../../assets/img/bg/test_background1.jpg')
-  animation animatedBackground 2s
+  animation slideInLeft 1s
   box-shadow inset 0 0 300px darkred
 
 #ArmoryScreenLabel
