--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -1,14 +1,33 @@
-@keyframes slideInLeft
-  0%
-    transform: translate3d(-100%, 0, 0)
-    visibility: visible
-  100%
-    transform: translate3d(0, 0, 0)
-
 @keyframes animatedBackground {
   from { opacity: 0 }
   to { opacity: 1 }
 }
+
+@keyframes flipInX
+  0%
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
+    transition-timing-function: ease-in
+    opacity: 0
+  40%
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg)
+    transition-timing-function: ease-in
+  60%
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg)
+    opacity: 1
+  80%
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg)
+  100%
+    transform: perspective(400px)
+
+@keyframes flipOutX
+  0%
+    transform: perspective(400px)
+  30%
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg)
+    opacity: 1
+  100%
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
+    opacity: 0
 
 @keyframes rotateIn
   0%
@@ -20,9 +39,58 @@
     transform: none
     opacity: 1
 
-@keyframes zoomIn
+@keyframes slideInLeft
+  0%
+    transform: translate3d(-100%, 0, 0)
+    visibility: visible
+  100%
+    transform: translate3d(0, 0, 0)
+
+@keyframes slideOutRight
+  0%
+    transform: translate3d(0, 0, 0)
+  100%
+    visibility: hidden
+    transform: translate3d(100%, 0, 0)
+
+@keyframes zoomInDown
   0%
     opacity: 0
-    transform: scale3d(.3, .3, .3)
-  50%
+    transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0)
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+  60%
     opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0)
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
+
+@keyframes zoomInUp
+  0%
+    opacity: 0
+    transform: scale3d(.1, .1, .1) translate3d(0, 1000px, 0)
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+  60%
+    opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0)
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
+
+@keyframes zoomOutDown
+  40%
+    opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0)
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+  100%
+    opacity: 0
+    transform: scale3d(.1, .1, .1) translate3d(0, 2000px, 0)
+    transform-origin: center bottom
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
+
+@keyframes zoomOutUp
+  40%
+    opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0)
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+  100%
+    opacity: 0
+    transform: scale3d(.1, .1, .1) translate3d(0, -2000px, 0)
+    transform-origin: center bottom
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
