--- a/src/client/briefing/activemission/active.mission.styl
+++ b/src/client/briefing/activemission/active.mission.styl
@@ -1,6 +1,10 @@
 .active-mission
   position absolute
   left 550px
+  animation zoomInDown 1s ease-out
+
+.active-mission.animated
+  animation zoomOutUp 1s ease-in
 
 #ActiveMissionToggleOff
   position absolute
@@ -11,4 +15,3 @@
   border-radius 10px
   background-color red
   z-index 1
-  // animation zoomIn 2s ease-out 2s forwards
