--- a/src/client/briefing/missionlist.table.styl
+++ b/src/client/briefing/missionlist.table.styl
@@ -4,6 +4,7 @@
   left 20px
   background rgba(0, 0, 0, 0.7)
   z-index 10
+  animation zoomInUp 1s
 
   table
     text-align center
@@ -29,3 +30,20 @@
 
       button
         background-color black
+
+#MissionsListTable.animated
+  animation zoomOutDown 1.5s
+
+#MissionListTablePlaceholder
+  background-color darkred
+  color white
+  padding-left 5px
+  padding-right 5px
+  font-size 1.5em
+  text-align center
+  width 350px
+  border 3px solid white
+  top 80px
+  left 20px
+  background rgba(0, 0, 0, 0.7)
+  z-index 10
