--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -8,6 +8,7 @@
   background-color silver
   border 5px solid black
   border-radius 1em
+  animation flipInX 1s
   z-index 1001
 
   ul
@@ -50,3 +51,6 @@
   padding-left 30px
   font-weight bold
   font-size 1.1em
+
+#MissionResultsWindow.animated
+  animation flipOutX 1.5s
