--- a/src/client/tutorial/screen.plastic.styl
+++ b/src/client/tutorial/screen.plastic.styl
@@ -2,6 +2,5 @@
   position absolute
   width 1640px
   height 860px
-  background-color darkgrey
-  opacity 0.1
+  background rgba(0, 0, 0, 0.9)
   z-index 10000
