smoothing out gameplay animations, new icons, tutorial start, stylus files corrections

--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -6,8 +6,9 @@
   height 860px
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
-  animation slideInLeft 1.5s
-  box-shadow inset 0 0 250px darkslateblue
+  animation slideInRight 1s
+  border 3px solid darkslateblue
+  box-shadow inset 0 0 50px darkslateblue
   z-index 0
 
 #BriefingMissionShiftRight
