--- a/src/client/dashboard/dashboard.content.styl
+++ b/src/client/dashboard/dashboard.content.styl
@@ -2,6 +2,7 @@
   position absolute
   width 1640px
   height 860px
-  // background-image url('../../../assets/img/bg/test_background1.jpg')
-  border-radius 0.5em
+  border-radius 2.5em
+  background-size 100% 100%
+  // border 3px solid teal
   // animation animatedBackground 2s
