--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -5,11 +5,12 @@
   flex-wrap wrap
   justify-content center
   align-items center
-  width 1640px
-  height 860px
+  width 1634px
+  height 854px
   background-color black
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
+  border-radius 2.5em
   animation animatedBackground 1s ease-out
 
 #StatusesTierComplete
