--- a/src/client/mission/missioncard/action.styl
+++ b/src/client/mission/missioncard/action.styl
@@ -11,123 +11,79 @@
   margin-right 10px
   border 1px solid black
 
-.action.monitor.actual
-  background url('../../../../assets/img/missions/actions/monitor.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.monitor.mission
-  background url('../../../../assets/img/missions/actions/monitor.jpg')
+.action.tap
+  background-color darkgreen
+  background-image url('../../../../assets/img/missions/actions/tap.png')
   background-size 100% 100%
   background-repeat no-repeat
+  box-shadow inset 0 0 25px black
 
-.action.pursuit.actual
-  background url('../../../../assets/img/missions/actions/pursuit.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.pursuit.mission
-  background url('../../../../assets/img/missions/actions/pursuit.jpg')
+.action.monitor
+  background-color darkgreen
+  background-image url('../../../../assets/img/missions/actions/monitor.png')
   background-size 100% 100%
   background-repeat no-repeat
+  box-shadow inset 0 0 25px black
 
-.action.hide.actual
-  background url('../../../../assets/img/missions/actions/hide.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-
-.action.hide.mission
-  background url('../../../../assets/img/missions/actions/hide.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
-
-.action.decipher.actual
-  background url('../../../../assets/img/missions/actions/decipher.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.decipher.mission
+.action.decipher
   background url('../../../../assets/img/missions/actions/decipher.jpg')
   background-size 100% 100%
   background-repeat no-repeat
 
-.action.improv.actual.stealth
-  background url('../../../../assets/img/missions/actions/improv_st.jpg')
-  background-size 55px 55px
+.action.pursuit
+  background-color red
+  background-image url('../../../../assets/img/missions/actions/pursuit.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
+
+.action.close_combat
+  background-color red
+  background-image url('../../../../assets/img/missions/actions/close_combat.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
+
+.action.hit
+  background-color red
+  background-image url('../../../../assets/img/missions/actions/hit.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
+
+.action.hide
+  background url('../../../../assets/img/missions/actions/hide.jpg')
+  background-size 100% 100%
   background-repeat no-repeat
 
-.action.improv.actual.operations
+.action.infiltrate
+  background-color gold
+  background-image url('../../../../assets/img/missions/actions/infiltrate.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
+
+.action.puppet
+  background-color gold
+  background-image url('../../../../assets/img/missions/actions/puppet.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
+
+.action.improv.operations
   background url('../../../../assets/img/missions/actions/improv_op.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.improv.actual.electronics
-  background url('../../../../assets/img/missions/actions/improv_el.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.improv.mission.operations
-  background url('../../../../assets/img/missions/actions/improv_op.jpg')
   background-size 100% 100%
   background-repeat no-repeat
+  box-shadow inset 0 0 25px black
 
-.action.improv.mission.stealth
+.action.improv.stealth
   background url('../../../../assets/img/missions/actions/improv_st.jpg')
   background-size 100% 100%
   background-repeat no-repeat
+  box-shadow inset 0 0 25px black
 
-.action.improv.mission.electronics
+.action.improv.electronics
   background url('../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-
-.action.close_combat.actual
-  background url('../../../../assets/img/missions/actions/close_combat.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.close_combat.mission
-  background url('../../../../assets/img/missions/actions/close_combat.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
-
-.action.infiltrate.actual
-  background url('../../../../assets/img/missions/actions/infiltrate.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.infiltrate.mission
-  background url('../../../../assets/img/missions/actions/infiltrate.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
-
-.action.hit.actual
-  background url('../../../../assets/img/missions/actions/hit.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.hit.mission
-  background url('../../../../assets/img/missions/actions/hit.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
-
-.action.tap.actual
-  background url('../../../../assets/img/missions/actions/tap.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.tap.mission
-  background url('../../../../assets/img/missions/actions/tap.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
-
-.action.puppet.actual
-  background url('../../../../assets/img/missions/actions/puppet.jpg')
-  background-size 55px 55px
-  background-repeat no-repeat
-
-.action.puppet.mission
-  background url('../../../../assets/img/missions/actions/puppet.jpg')
-  background-size 100% 100%
-  background-repeat no-repeat
+  box-shadow inset 0 0 25px black
