--- a/src/client/tutorial/choose.class.styl
+++ b/src/client/tutorial/choose.class.styl
@@ -2,30 +2,35 @@
   position absolute
   border 5px black solid
   border-radius 1em
-  background-color darkgrey
-  width 600px
+  background-color black
+  color ghostwhite
+  width 800px
   height 600px
   top 120px
-  left 520px
+  left 420px
   font-size 1.4em
   font-weight bold
   text-align center
   z-index 10011
 
 #ChooseOperative
-  margin 20px
   width 150px
   height 150px
-  background-color red
+  background-color black
+  border 3px solid ghostwhite
+  border-radius 0.5em
 
 #ChooseTechnician
   margin 20px
   width 150px
   height 150px
-  background-color darkcyan
+  background-color black
+  border 3px solid ghostwhite
+  border-radius 0.5em
 
 #ChooseSpy
-  margin 20px
   width 150px
   height 150px
-  background-color gold
+  background-color black
+  border 3px solid ghostwhite
+  border-radius 0.5em
