--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -3,6 +3,14 @@
   to { opacity: 1 }
 }
 
+@keyframes fadeInDown
+  0%
+    opacity: 0
+    transform: translate3d(0, -100%, 0)
+  100%
+    opacity: 1
+    transform: none
+
 @keyframes flipInX
   0%
     transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
@@ -46,6 +54,13 @@
   100%
     transform: translate3d(0, 0, 0)
 
+@keyframes slideInRight
+  0%
+    transform: translate3d(100%, 0, 0)
+    visibility: visible
+  100%
+    transform: translate3d(0, 0, 0)
+
 @keyframes slideOutRight
   0%
     transform: translate3d(0, 0, 0)
@@ -71,6 +86,16 @@
   60%
     opacity: 1
     transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0)
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
+
+@keyframes zoomInRight
+  0%
+    opacity: 0
+    transform: scale3d(.1, .1, .1) translate3d(1000px, 0, 0)
+    animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+  60%
+    opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(-10px, 0, 0)
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
 
 @keyframes zoomOutDown
