--- a/src/client/briefing/taskhelp.overview.styl
+++ b/src/client/briefing/taskhelp.overview.styl
@@ -4,8 +4,9 @@
   max-height 300px
   background rgba(0, 0, 255, 0.6)
   right 150px
-  top 200px
+  top 300px
   color white
   padding 10px
   border 3px white solid
   border-radius 0.5em
+  animation zoomInRight 1.5s ease-out
