--- a/src/client/dashboard/contestwindow/contest.window.styl
+++ b/src/client/dashboard/contestwindow/contest.window.styl
@@ -1,17 +1,12 @@
-@keyframes lefttorightshiftBackground {
-  from { background-position: 1640px 0px }
-  to { background-position: 0px 0px}
-}
-
 #ContestWindow
   position absolute
-  height 860px
-  width 1640px
+  height 854px
+  width 1634px
   border-radius 0.5em
   background-image url('../../../../assets/img/bg/big_screen_day.jpg')
   background-repeat no-repeat
   font-weight bold
-  animation lefttorightshiftBackground 1s ease-out
+  animation slideInLeft 1s ease-out
 
   table
     top 30px
