--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -3,10 +3,13 @@
   width 1640px
   height 860px
   left 50%
+  background-image url('../../../assets/img/bg/dashboard.jpg')
   // background-image url('../../../assets/img/bg/test_background4.jpg')
+  background-size 100% 100%
+  border 3px teal solid
   margin-left -820px
-  box-shadow inset 0 0 300px darkcyan
-  animation animatedBackground 2s
+  box-shadow inset 0 0 50px darkcyan
+  animation fadeInDown 1s
 
 #DashboardScreenLogout
   position absolute
@@ -71,3 +74,12 @@
   font-weight bold
   font-size 1.5em
   z-index 10101
+
+#SkipIntroButton
+  position absolute
+  top 320px
+  left 550px
+  width 240px
+  height 90px
+  background-color darkred
+  font-size 2em
