--- a/src/client/dashboard/strategicalwindow/strategical.window.styl
+++ b/src/client/dashboard/strategicalwindow/strategical.window.styl
@@ -1,11 +1,11 @@
 #StrategicalWindow
   position absolute
-  width 1640px
-  height 860px
-  background-color black
+  width 1634px
+  height 854px
+  // background-color black
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
-  animation animatedBackground 1s ease-out
+  // animation animatedBackground 1s ease-out
 
 #IntermediateGoalButton
   position absolute
