--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -105,36 +105,38 @@
   opacity 1
 
 #HiredGun > .equipment-stock-item
-  background url('../../../assets/img/equipments/hired_gun_256.png')
+  background url('../../../assets/img/equipments/E1O.png')
+  // background url('../../../assets/img/equipments/hired_gun_256.png')
   background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #HeavyArms > .equipment-stock-item
-  background url('../../../assets/img/equipments/heavy_arms_256.png')
+  background url('../../../assets/img/equipments/E2O.png')
+  // background url('../../../assets/img/equipments/heavy_arms_256.png')
   background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #ProtectiveGear > .equipment-stock-item
-  background url('../../../assets/img/equipments/protective_gear_256.png')
+  background url('../../../assets/img/equipments/E3O.png')
   background-color red
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #FakePassports > .equipment-stock-item
-  background url('../../../assets/img/equipments/passports_256.png')
-  background-color #e6e600
+  background rgba(255, 255, 0, 1)
+  background-image url('../../../assets/img/equipments/E1S.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #DrugsControl > .equipment-stock-item
-  background url('../../../assets/img/equipments/drugs_control_256.png')
-  background-color #e6e600
+  background rgba(255, 255, 0, 1)
+  background-image url('../../../assets/img/equipments/E2S.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
