--- a/src/client/mission/tabletoptier/dice/dice.styl
+++ b/src/client/mission/tabletoptier/dice/dice.styl
@@ -1,94 +1,81 @@
-.dice {
+.dice
   width 85px
   height 85px
   margin 3px
   border 2px solid black
   margin 10px
-}
 
 .dice.rollable
   box-shadow 1px 1px 2px black, 0 0 25px yellow, 0 0 5px red
 
-.dice.operations {
+.dice.operations
   background-color red
-}
+  box-shadow inset 0 0 25px black
 
-.dice.electronics {
+.dice.electronics
   background-color green
-}
+  box-shadow inset 0 0 25px black
 
-.dice.stealth {
+.dice.stealth
   background-color yellow
-}
+  box-shadow inset 0 0 25px black
 
-.pursuit {
-  background-image url('../../../../../assets/img/missions/actions/pursuit.jpg')
+.pursuit
+  background-image url('../../../../../assets/img/missions/actions/pursuit.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.hit {
-  background-image url('../../../../../assets/img/missions/actions/hit.jpg')
+.hit
+  background-image url('../../../../../assets/img/missions/actions/hit.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.close_combat {
-  background-image url('../../../../../assets/img/missions/actions/close_combat.jpg')
+.close_combat
+  background-image url('../../../../../assets/img/missions/actions/close_combat.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.dice.operations.improv {
+.dice.operations.improv
   background-image url('../../../../../assets/img/missions/actions/improv_op.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.electronics.tap {
-  background-image url('../../../../../assets/img/missions/actions/tap.jpg')
+.electronics.tap
+  background-image url('../../../../../assets/img/missions/actions/tap.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.electronics.monitor {
-  background-image url('../../../../../assets/img/missions/actions/monitor.jpg')
+.electronics.monitor
+  background-image url('../../../../../assets/img/missions/actions/monitor.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.electronics.decipher {
+.electronics.decipher
   background-image url('../../../../../assets/img/missions/actions/decipher.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.dice.electronics.improv {
+.dice.electronics.improv
   background-image url('../../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.stealth.puppet {
-  background-image url('../../../../../assets/img/missions/actions/puppet.jpg')
+.stealth.puppet
+  background-image url('../../../../../assets/img/missions/actions/puppet.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.stealth.hide {
+.stealth.hide
   background-image url('../../../../../assets/img/missions/actions/hide.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.stealth.infiltrate {
-  background-image url('../../../../../assets/img/missions/actions/infiltrate.jpg')
+.stealth.infiltrate
+  background-image url('../../../../../assets/img/missions/actions/infiltrate.png')
   background-size 100% 100%
   background-repeat no-repeat
-}
 
-.dice.stealth.improv {
+.dice.stealth.improv
   background-image url('../../../../../assets/img/missions/actions/improv_st.jpg')
   background-size 100% 100%
   background-repeat no-repeat
-}
