--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -6,9 +6,10 @@
   height 860px
   border 1px black solid
   background-color black
-  // background-image url('../../../assets/img/bg/test_background1.jpg')
+  background-image url('../../../assets/img/bg/armory_bg.jpg')
+  background-size 100% 100%
   animation slideInLeft 1s
-  box-shadow inset 0 0 50px darkred
+  box-shadow inset 0 0 50px tan
 
 #ArmoryScreenLabel
   position absolute
