--- a/src/client/briefing/activemission/actual.missioncard.styl
+++ b/src/client/briefing/activemission/actual.missioncard.styl
@@ -7,7 +7,7 @@
   height 230px
   width 550px
 
-#AgentAssignmentsContainer
+#AgentTokensContainer
   display flex
   flex-direction row
   flex-wrap wrap
@@ -15,16 +15,18 @@
   justify-content center
   position absolute
   bottom 75px
-  width 545px
-  height 300px
-  // background-image url('../../../../assets/img/bg/scratched_metal.jpg')
+  left 0px
+  height 80px
+  width 548px
+  border 2px solid white
+  z-index 1001
 
 .mission-card.actual
   position relative
   top 100px
   left 0px
   width 550px
-  height 480px
+  height 500px
   border 2px solid black
   background-color rgba(0, 0, 0, 0.7)
   // animation zoomInDown 1s ease-out
