talk screen, status tier 1 pozadi, code restructuring

--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -2,13 +2,14 @@
   position absolute
   left 50%
   margin-left -820px
-  width 1640px
-  height 860px
+  width 1634px
+  height 854px
   border 1px black solid
   background-color black
   background-image url('../../../assets/img/bg/armory_bg.jpg')
   background-size 100% 100%
   animation slideInLeft 1s
+  border 3px solid tan
   box-shadow inset 0 0 50px tan
 
 #ArmoryScreenLabel
