--- a/src/client/dashboard/collectionwindow/collection.window.styl
+++ b/src/client/dashboard/collectionwindow/collection.window.styl
@@ -4,3 +4,9 @@
   width 1640px
   height 860px
   animation animatedBackground 2s
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
+  font-size 1.9em
