--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -8,6 +8,8 @@
   width 1634px
   height 854px
   background-color black
+  background-image url('../../../../assets/img/bg/Dolce_vita_1.jpg')
+  background-size 100% 100%
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
   border-radius 2.5em
