--- a/src/client/mission/tabletoptier/dice/dice.styl
+++ b/src/client/mission/tabletoptier/dice/dice.styl
@@ -5,20 +5,27 @@
   border 2px solid black
   margin 10px
 
-.dice.rollable
-  box-shadow 1px 1px 2px black, 0 0 25px yellow, 0 0 5px red
 
 .dice.operations
   background-color red
   box-shadow inset 0 0 25px black
 
+.dice.operations.rollable
+  box-shadow 0 0 25px yellow, inset 0 0 25px black
+
 .dice.electronics
   background-color green
   box-shadow inset 0 0 25px black
 
+.dice.electronics.rollable
+  box-shadow 0 0 25px yellow, inset 0 0 25px black
+
 .dice.stealth
   background-color yellow
   box-shadow inset 0 0 25px black
+
+.dice.stealth.rollable
+  box-shadow 0 0 25px yellow, inset 0 0 25px black
 
 .pursuit
   background-image url('../../../../../assets/img/missions/actions/pursuit.png')
