--- a/src/client/briefing/agent.token.styl
+++ b/src/client/briefing/agent.token.styl
@@ -5,3 +5,8 @@
   border 1px solid brown
   border-radius 0.8em
   background-size 100% 100%
+
+.agent-token.istalk
+  width 100px
+  height 100px
+  border-radius 1.5em
