--- a/src/client/talk/talk.screen.styl
+++ b/src/client/talk/talk.screen.styl
@@ -1,12 +1,11 @@
-#TutorialScreen
+#TalkScreen
   position absolute
   width 1640px
   height 860px
   left 50%
   margin-left -820px
-  background rgba(0, 44, 77, 0.9)
 
-#CompleteTutorialButton
+#TalkToDashboard
   position absolute
   top 620px
   left 550px
@@ -14,13 +13,14 @@
   height 90px
   background-color darkred
   font-size 1.5em
+  color silver
 
-#TutorialToDashboardButton
+#TalkEnhancementsButton
   position absolute
   top 620px
-  left 550px
+  left 250px
   width 240px
   height 90px
-  color ghostwhite
-  background-color black
+  background-color darkgreen
   font-size 1.5em
+  color silver
