rearrangements, smoothing out gameplay, changed node v to LTS 4.5.0

--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -6,7 +6,7 @@
   height 860px
   // background-color black
   background-image url('../../../assets/img/bg/briefing_room.jpg')
-  animation slideInRight 1s
+  animation fadeIn 1s ease-out
   border 3px solid darkslateblue
   box-shadow inset 0 0 50px darkslateblue
   z-index 0
