--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -1,5 +1,10 @@
 .main-screen
-  background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
+  // background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
   background-size 1230px 645px
   background-repeat no-repeat
   background-color aqua
