--- a/src/client/dashboard/agentswindow/dialog.box.styl
+++ b/src/client/dashboard/agentswindow/dialog.box.styl
@@ -1,11 +1,13 @@
 .dialog-box
-  left -80px
+  left -90px
   top 55px
-  width 180px
-  height 150px
+  width 200px
+  height 170px
   background red
   position absolute
   border-radius 10px
+  font-size 1.3em
+  text-align center
   z-index 1001
 
 .dialog-box:before
@@ -21,14 +23,14 @@
 
 .dialog-box-to-talk
   position absolute
-  width 60px
-  height 30px
+  width 85px
+  height 40px
   bottom 0px
   left 0px
 
 .dialog-box-close
   position absolute
-  width 70px
-  height 30px
+  width 90px
+  height 40px
   bottom 0px
   right 0px
