--- a/src/client/dashboard/contestwindow/contest.window.styl
+++ b/src/client/dashboard/contestwindow/contest.window.styl
@@ -6,7 +6,7 @@
   background-image url('../../../../assets/img/bg/big_screen_day.jpg')
   background-repeat no-repeat
   font-weight bold
-  animation slideInLeft 1s ease-out
+  animation fadeInDown 1s ease-out
 
   table
     top 30px
