--- a/src/client/dashboard/strategicalwindow/strategical.window.styl
+++ b/src/client/dashboard/strategicalwindow/strategical.window.styl
@@ -5,7 +5,7 @@
   // background-color black
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
-  // animation animatedBackground 1s ease-out
+  animation fadeIn 1s ease-out
 
 #IntermediateGoalButton
   position absolute
