--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -3,6 +3,12 @@
   to { opacity: 1 }
 }
 
+@keyframes fadeIn
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
 @keyframes fadeInDown
   0%
     opacity: 0
