--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -21,18 +21,25 @@
   font-size 1.5em
   z-index 1001
 
-.game-title
+.login-button
   position absolute
-  z-index 1
 
-.command-login
+.signup-button
   position absolute
-  z-index 1
+  font-size 1em
+  top 10%
+  z-index 1000
 
-.command-signup
+.logout-button
   position absolute
-  left 160px
-  z-index 1
+  background-color red
+  color black
+  border-color silver
+  text-shadow 2px 2px 8px black
+  width 120px
+  left right 5px
+  bottom 5px
+  color black
 
 #CommandEmailSupport
   font 1.7em
