lowering attention level, imprisoned agent ties to last mission, displaying missions done in command

--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -8,7 +8,7 @@
   background-color black
   background-image url('../../../assets/img/bg/armory_bg.jpg')
   background-size 100% 100%
-  animation slideInLeft 1s
+  animation fadeIn 1s
   border 3px solid tan
   box-shadow inset 0 0 50px tan
 
