--- a/src/client/command/mainscreen.styl
+++ b/src/client/command/mainscreen.styl
@@ -13,3 +13,11 @@
   overflow auto
   position absolute
   width 1230px
+
+.org-mission-done
+  display block
+
+#LoadMissionsButton
+  position absolute
+  top 0px
+  left 0px
