--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -9,7 +9,7 @@
   background-size 100% 100%
   border 3px teal solid
   box-shadow inset 0 0 50px darkcyan
-  animation slideInRight 1.5s
+  animation fadeIn 1.5s
 
 #DashboardScreenLogout
   position absolute
