--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -1,4 +1,4 @@
-#StatusesWindow
+#StatusesWindow1
   position absolute
   display flex
   flex-position row
@@ -13,7 +13,24 @@
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
   border-radius 2.5em
-  animation animatedBackground 1s ease-out
+  animation fadeIn 1s ease-out
+
+#StatusesWindow2
+  position absolute
+  display flex
+  flex-position row
+  flex-wrap wrap
+  justify-content center
+  align-items center
+  width 1634px
+  height 854px
+  background-color black
+  background-image url('../../../../assets/img/bg/Dolce_vita_2.jpg')
+  background-size 100% 100%
+  // background-image url('../../../../assets/img/bg/sandstone.jpg')
+  background-repeat no-repeat
+  border-radius 2.5em
+  animation fadeIn 1s ease-out
 
 #StatusesTierComplete
   position absolute
@@ -35,8 +52,13 @@
 
 #StatusesHistoryButton
   position absolute
-  left 0px
-  top 0px
+  left 5px
+  top 5px
+  height 20px
+  width 20px
+  border-radius 10px
+  background-color yellow
+  z-index 1
 
 #StatusesTierCompleteButton
   position absolute
