--- a/src/client/auth/signup.message.styl
+++ b/src/client/auth/signup.message.styl
@@ -1,9 +1,9 @@
 #SignupMessage
   position absolute
-  top 150px
+  top 170px
   left 620px
   width 340px
-  border 1px solid gold
+  // border 1px solid gold
   border-radius 1em
   text-align center
   font-weight bold
@@ -13,8 +13,15 @@
   color gold
 
   #SignupToLogin
-    width 120px
-    height 40px
-    color black
-    background-color silver
+    position absolute
+    top 90px
+    left 125px
+    width 90px
+    height 30px
+    color yellow
+    text-shadow 1px 1px gold
     opacity 0.5
+    font-weight normal
+    font-size 1em
+    background rgba(0, 0, 50, 0.8)
+    z-index 1
