--- a/src/client/command/command.content.styl
+++ b/src/client/command/command.content.styl
@@ -1,4 +1,4 @@
-.main-screen
+.command-content
   // background url('../../../assets/img/bg/worldheatmapgrey_color2.png')
   display flex
   flex-direction row
@@ -7,7 +7,7 @@
   justify-content center
   background-size 1230px 645px
   background-repeat no-repeat
-  background-color aqua
+  top 30px
   height 645px
   left 205px
   overflow auto
@@ -15,9 +15,16 @@
   width 1230px
 
 .org-mission-done
-  display block
-
-#LoadMissionsButton
-  position absolute
-  top 0px
-  left 0px
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content space-around
+  // align-content center
+  background rgba(9, 34, 156, 1)
+  border 1px solid black
+  font-size 1.2em
+  font-weight bold
+  padding 5px
+  padding-left 15px
+  padding-right 15px
