--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -1,5 +1,5 @@
 /*Command Tier*/
-#CommandCenterScreen
+#CommandScreen
   margin -820px
   margin-top 5px
   width 1640px
@@ -7,7 +7,7 @@
   left 50%
   position absolute
 
-#CommandCenterScreenLabel
+#CommandScreenLabel
   position absolute
   width 400px
   height 50px
@@ -65,3 +65,9 @@
   background-color honeydew
   border 5px solid black
   z-index 1011
+
+#LoadMissionsButton
+  position absolute
+  background rgba(255, 0, 0, 1)
+  top 100px
+  left 0px
