--- a/src/client/dashboard/missiontalk/mission.talk.styl
+++ b/src/client/dashboard/missiontalk/mission.talk.styl
@@ -3,32 +3,15 @@
   left 200px
   top 100px
   width 1240px
+  height 600px
+  display flex
+  flex-direction row
+  flex-wrap nowrap
+  align-items center
+  justify-content space-around
   background-color darkcyan
   font-weight bold
   font-size 1.3em
   border 5px solid black
   border-radius 1em
   padding 20px
-
-.mission-dialog
-  width 1200px
-
-.player-talk
-  display block
-  right 20px
-  border 2px solid darkgrey
-  border-radius 0.4em
-  background-color yellow
-
-  img
-    float right
-
-.agent-talk
-  display block
-  border 2px solid gold
-  border-radius 0.4em
-  background-color red
-  width 600px
-
-  img
-    float left
