--- a/src/client/tutorial/curved.tail.arrow.styl
+++ b/src/client/tutorial/curved.tail.arrow.styl
@@ -1,22 +1,25 @@
 .curved-tail-arrow {
   position relative
-  top 380px
+  top 790px
+  left 60px
   width 0
   height 0
-  border-top 18px solid transparent
-  border-right 18px solid blue
-  transform rotate(-100deg)
+  border-top 36px solid transparent
+  border-right 36px solid darkblue
+  transform rotate(110deg)
+  z-index 10011
 }
 
 .curved-tail-arrow:after {
   content ''
   position absolute
   border 0 solid transparent
-  border-top 6px solid blue
-  border-radius 40px 0 0 0
-  top -24px
-  left -18px
-  width 24px
-  height 24px
+  border-top 12px solid darkblue
+  border-radius 80px 0 0 0
+  top -48px
+  left -36px
+  width 48px
+  height 48px
   transform rotate(45deg)
+  z-index 10011
 }
