--- a/src/client/tutorial/playerhistoryintro/player.history.photo.styl
+++ b/src/client/tutorial/playerhistoryintro/player.history.photo.styl
@@ -5,10 +5,23 @@
   top 10px
   left 20px
   border 1px solid white
-  display flex
-  flex-direction row
-  flex-wrap wrap
-  align-items center
-  justify-content center
   font-weight bold
   font-size 1.5em
+
+.player-history-slide-text
+  position absolute
+  top 370px
+  width 1540px
+  height 50px
+  text-align center
+  overflow hidden
+
+.player-history-slide-text-overlay
+  display block
+  position absolute
+  top 370px
+  right 0px
+  width 1540px
+  height 50px
+  background rgba(129, 30, 30, 1)
+  z-index 1
