--- a/src/client/auth/login.message.styl
+++ b/src/client/auth/login.message.styl
@@ -1,10 +1,15 @@
 #LoginMessage
   position absolute
-  top 210px
-  left 620px
-  min-height 30px
-  width 340px
-  border 1px solid silver
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
+  top 200px
+  left 690px
+  width 210px
+  height 100px
+  // border 1px solid silver
   border-radius 1em
   text-align center
   font-weight bold
@@ -12,3 +17,13 @@
   opacity 0
   padding 5px
   color silver
+
+#LoginToSignup
+  width 90px
+  height 30px
+  color black
+  text-shadow -1px 1px #fCf304
+  opacity 0.5
+  font-size 1em
+  background rgba(255, 255, 34, 0.8)
+  z-index 1
