--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -77,9 +77,18 @@
 
 #SkipIntroButton
   position absolute
-  top 320px
-  left 550px
-  width 240px
-  height 90px
-  background-color darkred
-  font-size 2em
+  top 720px
+  left 350px
+  width 160px
+  height 50px
+  color white
+  background-color black
+  font-size 1.2em
+
+#NewGameStart
+  position absolute
+  width 400px
+  left 620px
+  top 60px
+  font-weight bold
+  color red
