--- a/src/client/dashboard/introduction.window.styl
+++ b/src/client/dashboard/introduction.window.styl
@@ -1,7 +1,8 @@
 #IntroductionWindow
   position absolute
-  // background-image url('../../../assets/img/bg/smooth_metal.jpg')
-  background-color grey
+  background rgba(0, 0, 0, 0.7)
+  color white
+  // background-color grey
   width 820px
   height 860px
   border 10px solid black
@@ -13,6 +14,9 @@
   padding-left 35px
   padding-right 35px
   z-index 1001
+
+  button
+    color black
 
 #ReadIntroductionWindowButton
   position absolute
