--- a/src/client/dashboard/welcome.window.styl
+++ b/src/client/dashboard/welcome.window.styl
@@ -1,7 +1,7 @@
 #WelcomeWindow
   position absolute
-  // background-image url('../../../assets/img/bg/smooth_metal.jpg')
-  background-color grey
+  background-color rgba(0, 0, 0, 0.7)
+  color ghostwhite
   width 820px
   height 860px
   border 10px solid black
@@ -28,18 +28,13 @@
       text-align left
       font-weight normal
 
+  button
+    color black
+
 #ReadDevelopersNoticeButton
   position absolute
   width 240px
   left -120px
   margin-left 50%
   bottom 20px
-  border 3px solid black
-
-#LoginDevNoticeButton
-  position absolute
-  right 10px
-  bottom 20px
-  background-color grey
-  font-size 1.8em
   border 3px solid black
