armory and statuses interface changes, taskname lib function, task global property of game, task react comp failing due to changes, different styling of navs

--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -1,9 +1,7 @@
 #AgentEquipContent
   position absolute
-  top 0px
-  left 150px
-  width 1336px
-  height 860px
+  width 1634px
+  height 854px
 
   #ArmoryGameCashCounter
     position absolute
@@ -40,3 +38,26 @@
     width 150px
     height 45px
     background-color black
+
+  #ArmoryCodeRed
+    position absolute
+    top 5px
+    left 5px
+    background-color red
+
+  #ArmoryCodeYellow
+    position absolute
+    top 5px
+    left 35px
+    background-color yellow
+
+  #ArmoryCodeGreen
+    position absolute
+    top 5px
+    left 65px
+    background-color green
+
+.armory-code
+  width 20px
+  height 20px
+  border-radius 10px
