--- a/src/client/mission/tasktier/tasktier.styl
+++ b/src/client/mission/tasktier/tasktier.styl
@@ -1,9 +1,10 @@
 #TaskTier
   position absolute
   top 0px
-  left 150px
-  width 330px
+  left 10px
+  width 470px
   height 860px
+  padding-top 70px
   z-index 10
   animation-delay 5s
   animation animatedBackground 3s ease-in
