--- a/src/client/navs/commandtobriefing.styl
+++ b/src/client/navs/commandtobriefing.styl
@@ -2,8 +2,5 @@
   position absolute
   left 10px
   top 10px
-  width 120px
-  height 50px
-  background-color black
-  color silver
-  font-size 1.1em
+  transform rotate(90deg)
+  color white
