--- a/src/client/navs/dashboardtocommand.styl
+++ b/src/client/navs/dashboardtocommand.styl
@@ -1,9 +1,6 @@
 #DashboardToCommand
   position absolute
-  top 10px
-  right 10px
-  width 130px
-  height 50px
-  background-color black
-  color silver
-  font-size 1.1em
+  top 35px
+  right 55px
+  border-right-color teal
+  font-size 1.2em
