--- a/src/client/tutorial/curved.tail.arrow.styl
+++ b/src/client/tutorial/curved.tail.arrow.styl
@@ -1,4 +1,4 @@
-.curved-tail-arrow {
+.curved-tail-arrow
   position relative
   top 790px
   left 60px
@@ -8,9 +8,8 @@
   border-right 36px solid darkblue
   transform rotate(110deg)
   z-index 10011
-}
 
-.curved-tail-arrow:after {
+.curved-tail-arrow:after
   content ''
   position absolute
   border 0 solid transparent
@@ -22,4 +21,3 @@
   height 48px
   transform rotate(45deg)
   z-index 10011
-}
