--- a/src/client/dashboard/statuseswindow/status.card.styl
+++ b/src/client/dashboard/statuseswindow/status.card.styl
@@ -105,6 +105,11 @@
   background-size 100% 100%
   background-repeat no-repeat
 
+.status-card.stables
+  background-image url('../../../../assets/img/statuses/stables.jpg')
+  background-size 100% 100%
+  background-repeat no-repeat
+
   button
     margin 5px
 
