--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -12,7 +12,7 @@
   background-size 100% 100%
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
-  border-radius 2.5em
+  border-radius 1em
   animation fadeIn 1s ease-out
 
 #StatusesWindow2
@@ -29,7 +29,41 @@
   background-size 100% 100%
   // background-image url('../../../../assets/img/bg/sandstone.jpg')
   background-repeat no-repeat
-  border-radius 2.5em
+  border-radius 1em
+  animation fadeIn 1s ease-out
+
+#StatusesWindow3
+  position absolute
+  display flex
+  flex-position row
+  flex-wrap wrap
+  justify-content center
+  align-items center
+  width 1634px
+  height 854px
+  background-color black
+  background-image url('../../../../assets/img/bg/Dolce_vita_3.jpg')
+  background-size 100% 100%
+  // background-image url('../../../../assets/img/bg/sandstone.jpg')
+  background-repeat no-repeat
+  border-radius 1em
+  animation fadeIn 1s ease-out
+
+#StatusesWindow4
+  position absolute
+  display flex
+  flex-position row
+  flex-wrap wrap
+  justify-content center
+  align-items center
+  width 1634px
+  height 854px
+  background-color black
+  background-image url('../../../../assets/img/bg/Dolce_vita_4.jpg')
+  background-size 100% 100%
+  // background-image url('../../../../assets/img/bg/sandstone.jpg')
+  background-repeat no-repeat
+  border-radius 1em
   animation fadeIn 1s ease-out
 
 #StatusesTierComplete
@@ -50,14 +84,24 @@
     left 340px
     z-index 1
 
-#StatusesHistoryButton
+#StatusesHistoryToggle
+  position absolute
+  left 35px
+  top 5px
+  height 20px
+  width 20px
+  border-radius 10px
+  background-color yellow
+  z-index 1
+
+#TierShownToggle
   position absolute
   left 5px
   top 5px
   height 20px
   width 20px
   border-radius 10px
-  background-color yellow
+  background-color red
   z-index 1
 
 #StatusesTierCompleteButton
