--- a/src/client/mission/missioncard/tasks/task.styl
+++ b/src/client/mission/missioncard/tasks/task.styl
@@ -1,7 +1,15 @@
+.task-fieldset
+  position relative
+  left 20px
+
+.task-fieldset-legend
+  position absolute
+  color white
+
 .task.on-mission
   position relative
   display inline-block
-  left -40px
+  left 0px
   width 380px
   height 105px
   margin-top 30px
