--- a/src/client/navs/armorytobriefing.styl
+++ b/src/client/navs/armorytobriefing.styl
@@ -1,9 +1,6 @@
 #ArmoryToBriefing
   position absolute
-  right 10px
-  top 10px
-  width 100px
-  height 50px
-  background-color black
-  color silver
-  font-size 1.1em
+  right 40px
+  top 20px
+  color tan
+  z-index 10111
