--- a/src/client/navs/briefingtoarmory.styl
+++ b/src/client/navs/briefingtoarmory.styl
@@ -1,8 +1,6 @@
 #BriefingToArmory
   position absolute
-  top 10px
-  left 10px
-  width 100px
-  height 50px
-  background-color black
-  color lightgrey
+  top 20px
+  left 20px
+  color white
+  transform rotate(90deg)
