--- a/src/client/navs/briefingtodashboard.styl
+++ b/src/client/navs/briefingtodashboard.styl
@@ -1,7 +1,6 @@
 #BriefingToDashboard
   position absolute
-  top 10px
-  right 10px
-  width 150px
-  height 50px
-  background-color black
+  top 20px
+  right 40px
+  font-size 1.2em
+  color white
