--- a/src/client/navs/commandtodashboard.styl
+++ b/src/client/navs/commandtodashboard.styl
@@ -2,7 +2,4 @@
   position absolute
   right 10px
   top 10px
-  width 150px
-  height 50px
-  background-color black
-  color silver
+  color white
