--- a/src/client/navs/dashboardtobriefing.styl
+++ b/src/client/navs/dashboardtobriefing.styl
@@ -1,9 +1,7 @@
 #DashboardToBriefing
   position absolute
   top 10px
-  left 10px
-  width 120px
-  height 50px
-  background-color black
-  color silver
-  font-size 1.25em
+  left 30px
+  border-right-color teal
+  transform rotate(90deg)
+  font-size 1.2em
