--- a/src/client/navs/missiontobriefing.styl
+++ b/src/client/navs/missiontobriefing.styl
@@ -1,9 +1,6 @@
 #MissionToBriefingButton
   position absolute
   top 10px
-  width 100px
-  height 50px
-  background-color black
-  color silver
-  font-size 1.1em
+  left 20px
+  transform rotate(90deg)
   z-index 10
