interface changes mission screen, dashboardscreen, one new tutorial hint

--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -43,6 +43,12 @@
     transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
     opacity: 0
 
+@keyframes pulse
+    0%,100%
+        transform: scale3d(1,1,1)
+    50%
+        transform: scale3d(1.05,1.05,1.05)
+
 @keyframes pulseFortyFive
     0%,100%
         transform: scale3d(1,1,1) rotate(45deg)
