--- a/src/client/mission/agentstier/agentonmission/agentonmission.styl
+++ b/src/client/mission/agentstier/agentonmission/agentonmission.styl
@@ -2,7 +2,7 @@
   position absolute
   list-style none
   top 185px
-  left 0
+  left 50px
   width 425px
   height 265px
   margin 0px
@@ -27,7 +27,6 @@ div.agent-equipment-slot
   height 30px
   border-top-left-radius 2px
   border-bottom-left-radius 2px
-
 
 .agent-equipment-description-placeholder
   width 50px
