--- a/src/client/mission/agentstier/buttons/successbutton.styl
+++ b/src/client/mission/agentstier/buttons/successbutton.styl
@@ -1,5 +1,9 @@
 #SuccessButton
   position absolute
-  border 5px solid greenyellow
-  bottom 70px
-  right 0px
+  width 220px
+  font-size 1.2em
+  border 5px solid gold
+  background-color yellow
+  bottom 40px
+  right 40px
+  animation 1s pulse 2s infinite
