--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -1,9 +1,9 @@
 #TableTop
   position absolute
-  width 554px
+  top 50px
+  left 30px
+  width 540px
   height 550px
-  margin-left 10px
-  margin-top 50px
   border 2px solid maroon
 
 #MissionStartStatus
@@ -28,3 +28,4 @@
   border 2px solid black
   bottom 1px
   right 185px
+  animation 1s pulse 2s infinite
