--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -23,9 +23,10 @@
 
 #MissionScreenLabel
   position absolute
-  width 200px
+  margin-left -150px
+  left 50%
+  width 300px
   height 50px
-  left 720px
   top -25px
   background-color grey
   border 5px solid black
