--- a/src/client/talk/agent.to.talk.to.styl
+++ b/src/client/talk/agent.to.talk.to.styl
@@ -1,10 +1,15 @@
 #AgentToTalkTo
   position absolute
   top 100px
-  left 400px
-  width 172px
-  height 184px
+  left 500px
+  width 272px
+  height 224px
   border 2px solid white
+
+  img
+    position absolute
+    left 100px
+    bottom 0px
 
 #DoneTalkingButton
   position absolute
