gamesaves info, travelwindow relocated to briefing, new pics, changes in mission screen flow

--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -143,3 +143,12 @@
     transform: scale3d(.1, .1, .1) translate3d(0, -2000px, 0)
     transform-origin: center bottom
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1)
+
+@keyframes zoomOutRight
+  40%
+    opacity: 1
+    transform: scale3d(.475, .475, .475) translate3d(-42px, 0, 0)
+  100%
+    opacity: 0
+    transform: scale(.1) translate3d(2000px, 0, 0)
+    transform-origin: right center
