--- a/src/client/dashboard/country.state.overview.styl
+++ b/src/client/dashboard/country.state.overview.styl
@@ -1,7 +1,8 @@
 #CountryStateOverview
   position absolute
-  right 140px
+  right 160px
   top 130px
+  transform rotate(-90deg)
 
 #EndGameNotSoSecretNowIndicator
   position absolute
@@ -25,3 +26,11 @@
   top 20px
   color white
   z-index 1
+
+.country-obscurity-bar-countryname
+  position absolute
+  top 40px
+  left -44px
+  color red
+  transform rotate(90deg)
+  width 150px
