--- a/src/client/briefing/activemission/actual.missioncard.styl
+++ b/src/client/briefing/activemission/actual.missioncard.styl
@@ -3,9 +3,9 @@
   flex-direction row
   flex-wrap wrap
   align-items center
-  justify-content center
-  height 230px
-  width 550px
+  justify-content space-around
+  height 288px
+  width 520px
 
 #AgentTokensContainer
   display flex
@@ -23,10 +23,10 @@
 
 .mission-card.actual
   position relative
-  top 100px
+  top 50px
   left 0px
   width 550px
-  height 500px
+  height 600px
   border 2px solid black
   background-color rgba(0, 0, 0, 0.7)
   // animation zoomInDown 1s ease-out
