--- a/src/client/briefing/activemission/agent.assignments.container.styl
+++ b/src/client/briefing/activemission/agent.assignments.container.styl
@@ -5,7 +5,7 @@
   align-items center
   justify-content center
   position absolute
-  border 2px solid orange
+  // border 2px solid orange
   bottom 155px
   width 548px
   height 290px
