--- a/src/client/briefing/country.of.operation.styl
+++ b/src/client/briefing/country.of.operation.styl
@@ -1,10 +1,27 @@
+#CountryOfOperationText
+  color white
+
+#TravelToText
+  position absolute
+  width 170px
+  left 0px
+  top 47px
+  color white
+
+#CountryOfOperation.animated
+  animation zoomOutRight 1.3s ease-out
+
 #CountryOfOperation
   position absolute
-  left -160px
-  top 50px
+  background rgba(0, 0, 0, 0.5)
+  width 250px
+  height 200px
+  right 160px
+  bottom 300px
+  animation zoomInRight 1.4s
 
   .countryofoperation-root
-    background-color silver
+    background rgba(0, 120, 240, 0.8)
     border none
     color #000
     display block
@@ -14,10 +31,10 @@
     margin 10px
     padding 0 1em
     position absolute
-    left 10px
+    top 90px
+    left 80px
     text-align center
     transition all 1000ms ease
-    top 60px
     width 150px
     z-index 1000
 
