--- a/src/client/dashboard/optionswindow/options.game.window.styl
+++ b/src/client/dashboard/optionswindow/options.game.window.styl
@@ -1,12 +1,16 @@
 #OptionsGameWindow
   position absolute
   width 670px
-  height 300px
+  height 400px
   bottom 5px
   left 5px
   border 3px solid white
   border-radius 1em
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+
+  fieldset
+    height 385px
+    width 650px
 
   legend
     font-size 1.4em
@@ -15,6 +19,9 @@
   button
     background-color red
     color black
+
+.save-game-button
+  display inline-block
 
 #SaveGameMessage
   position absolute
