--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -33,3 +33,12 @@
 
   button
     margin 25px
+
+#RetireGameButton
+  position absolute
+  background rgba(125, 125, 0, 0.9)
+  right 25px
+  bottom 160px
+  height 50px
+  width 100px
+  font-size 1.3em
